# gribr

./: .Rbuildignore  .git_commit_template  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.win  gribr.Rproj  install_eccodes.sh  install_grib_api.sh
.github/workflows/: check-latest.yaml  check-minimum.yaml  check-standard.yaml  check-windows.yaml  lint.yaml  test-coverage.yaml
R/: expand_grids.R  get.R  grib_api_version.R  grib_close.R  grib_cube.R  grib_df.R  grib_expand_grids.R  grib_get_message.R  grib_get_values.R  grib_latlons.R  grib_length.R  grib_list.R  grib_open.R  grib_proj4str.R  grib_select.R  gribr.R  has_key.R  is_grib.R  is_grib_message.R  is_null_externalptr.R  length.R  meshgrid.R  print.R  proj_to_string.R  rGRIB.R  rGRIB_methods.R  rGRIB_private.R  redtoreg.R  zzz.R
inst/: CITATION
inst/extdata/: bad_key.grib  multi_created.grib1
m4/: eccodes_version.m4  grib_api_version.m4  gribr_link_eccodes.m4  gribr_link_grib_api.m4
man/: grib_api_version.Rd  grib_close.Rd  grib_cube.Rd  grib_expand_grids.Rd  grib_get_message.Rd  grib_latlons.Rd  grib_length.Rd  grib_list.Rd  grib_open.Rd  grib_proj4str.Rd  grib_select.Rd  gribr.Rd  has.key.Rd  is.grib.Rd  is.grib.message.Rd  print.grib.Rd
src/: Makevars  Makevars.in  Makevars.ucrt  get.c  grib_api_extra.h  grib_api_version.c  grib_close.c  grib_df.c  grib_get_message.c  grib_get_values.c  grib_latlons.c  grib_length.c  grib_list.c  grib_open.c  grib_select.c  grib_test.c  gribr.h  gribr_init.c  gribr_internals.c  helper.c  message_from_handle.c  rGRIB.c  rGRIB.h  rGRIB_init.c  rGRIB_internals.c  redtoreg.c  strlcat.c
tests/: testthat.R
tests/testthat/: test-attributes.R  test-messages.R
tools/m4/: gribr_link_eccodes.m4
